Registered new routes
Added registration form
Added mongoose

--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -6,9 +6,9 @@ nav.navbar.navbar-toggleable-md.navbar-inverse.bg-inverse
         | Bookworm
     div.collapse.navbar-collapse(id='navbarSupportedContent')
         div.navbar-nav.mr-auto
-            a.nav-item.nav-link.active(href='#') Register
+            a.nav-item.nav-link.active(href='register') Sign Up
                 span.sr-only
-            a.nav-item.nav-link(href='#') About
+            a.nav-item.nav-link(href='about') About
                 span.sr-only
-            a.nav-item.nav-link(href='#') Contact
-            a.nav-item.nav-link(href='#') My Profile
+            a.nav-item.nav-link(href='contact') Contact
+            a.nav-item.nav-link(href='profile') My Profile
