Wired up registration to database

--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -1,7 +1,7 @@
 nav.navbar.navbar-toggleable-md.navbar-inverse.bg-inverse
     button.navbar-toggler.navbar-toggler-right(type='button', data-toggle='collapse', data-target='#navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
         span.material-icons reorder
-    a.navbar-brand(href='#')
+    a.navbar-brand(href='/')
         i.material-icons bookmark_border
         | Bookworm
     div.collapse.navbar-collapse(id='navbarSupportedContent')
