layout adjustments to center forms on large devices

--- a/views/login.pug
+++ b/views/login.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
     .row
-        .col
+        .col-6.col-xs-12.offset-sm-3
             h1 Log In
             form(action="/login", method="POST")
                 .form-group
