--- a/views/register.pug
+++ b/views/register.pug
@@ -4,7 +4,7 @@ block content
         .col
             h1 Sign Up
     .row
-        .col
+        .col-6.col-xs-12.offset-sm-3
             form(method='POST' action='/register')
                 .form-group
                     label(for="UserName") Name:
