updated profile styles and layout

--- a/views/profile.pug
+++ b/views/profile.pug
@@ -1,10 +1,13 @@
 extends layout
 block content
     .row
-        .col.offset-3
-            div.persona-container
-                i.material-icons.md-36 account_circle
-                span.font-36 #{name}
+        .col-6.offset-3
+            div.persona-container                
+                h1 
+                   i.material-icons.md-36 account_circle
+                   |  #{name}
             div.favorite-book
-                i.material-icons.md-36 chrome_reader_mode
-                span.font-36 #{favorite}
+                h2
+                    i.material-icons.md-36 chrome_reader_mode
+                    |  Favorite book
+                p.text-normal.offset-1 #{favorite}
